<resources>
    <string name="app_name">Azimuth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="controller">Controller</string>

    <string name="adjust">Adjust the level of the tiller</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="turnleft">Turn Left</string>
    <string name="turnright">Turn Right</string>
    <string name="base_position">BASE LEVEL</string>
    <string name="first_position">FIRST LEVEL</string>
    <string name="second_position">SECOND LEVEL</string>
    <string name="c3">CAMERA</string>
    <string name="c2">AUTONOMOUS</string>
    <string name="c4">ROTARY</string>
    <string name="c5">OFFLINE</string>
    <string name="c6">ONLINE</string>
    <string name="back">Back</string>
    <string name="add_position">Add</string>
    <string name="send_position">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="item_menu_1">Home</string>
    <string name="item_menu_2">Device</string>
    <string name="item_menu_3">Notification</string>
    <string name="item_menu_4">Profile</string>
    <string name="u1">Name\'s device</string>
    <string name="u2">Client ID</string>
    <string name="u3">Token</string>
    <string name="u4">Streaming URI</string>
    <string name="u5">About device…</string>
    <string name="point_1">Position 1</string>
    <string name="point_2">Point 2</string>
    <string name="point_3">Point 3</string>
    <string name="point_4">Point 4</string>
    <string name="c1">Device\'s name</string>
    <string name="u6">Update</string>
    <string name="u7">Delete</string>

</resources>