<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/item_menu_1"
        android:icon="@drawable/home_menu"/>
    <item
        android:id="@+id/device"
        android:title="@string/item_menu_2"
        android:icon="@drawable/gamepad_menu"/>
<!--    <item-->
<!--        android:id="@+id/control"-->
<!--        android:title="Controller"-->
<!--        android:icon="@drawable/gamepad"/>-->
    <item
        android:id="@+id/notify"
        android:title="@string/item_menu_3"
        android:icon="@drawable/notification_menu"/>
    <item
        android:id="@+id/profile"
        android:title="@string/item_menu_4"
        android:icon="@drawable/profile_menu"/>
</menu>